fix some alignment issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -109,7 +109,7 @@ footer ul li a:focus i.fa {
 i.fa.warning {
     text-align: center;
     font-size: 64px;
-    margin: 0;
+    margin: 8px 0 0;
     color: #fbc02d;
     vertical-align: top;
 }
@@ -121,6 +121,10 @@ i.fa.warning {
 .column.alert h1 {
     text-align: left;
     margin: 0;
+}
+
+.column.alert h2 {
+    text-align: left;
 }
 
 /*********
